src/test/deca/syntax/invalid/decl_var_avec_deux_egale.deca
//Description:
// on a fait deux == dans la declaration
//
//Resultats:
//Erreur syntaxique
//Regle : decl_var -> ident ('='expr)?

{int cote == 575758;}



